--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,7 +67,7 @@
 </div>
 </div>
 
-
+<script src="../colecciones.js"></script>
 
 <!-- Modal -->
 <div class="modal fade" id="selectionModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -91,6 +91,6 @@
 
 
 <%- include("./bootstrap.ejs") -%>
-<script src="colecciones.js"></script>
+
   </body>
 </html>
