--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,22 +32,25 @@
   <h2>Create a new collection</h2>
  
    <form id="formCreate" action="/databases/addCollection" method="POST">
-    <button id="create" type="submit" class="btn-primary">Create</button>
+   <input class="form-control" id="dbname" name="dbname" type="text"  placeholder="dbname"/> 
+   <input class="form-control" id="collectionAdd" name="col" type="text"  placeholder="collection"/> 
+   <input class="form-control" id="name" name="name" type="text"  placeholder="collection name to add"/> 
+   <button id="create" type="submit" class="btn-primary">Create</button>
   </form>
 
 </div>
   <div class="col-12 col-md-8">
   <h2>Update register</h2>
-  <form id="formUpdate" action="/databases/update" method="POST">
+  <form id="formUpdate" action="databases/updateCollection" method="POST">
     <button class="btn btn-primary" id="butUpdate" type="submit">Update</button>
   </form>
   </div>
 
 <div class="col-12 col-md-8">
 <h2>Delete</h2>
+<form id="formDelete">
 <div class="input-group">
 
-<form id="formDelete">
   <select id="selectDbs">
    
     <% databases.forEach((database)=>{ -%>
